# ml-serving-api

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  main.py  ml_service.py  models.py
src/auth/: dependencies.py  models.py  security.py
src/database/: __init__.py  users.py
tests/: __init__.py  test_api.py  test_auth.py
